@@ -77,6 +77,7 @@ for detailed view of each issue, please consult http://issues.apache.org/jira/br
 - NEW: Add transitive dependency version and branch override mechanism (IVY-784)
 - NEW: Add new packager resolver (IVY-829) (thanks to Archie Cobbs)
 
+- IMPROVEMENT: undeprecate configure task (IVY-849)
 - IMPROVEMENT: Detect missing artifacts on publish asap (IVY-862)
 - IMPROVEMENT: Allow to set the branch at deliver/publish time (IVY-859)
 - IMPROVEMENT: Add defaultconf in publications tag of ivy file (IVY-801)
